# infra-thunder

./: .pre-commit-config.yaml  README.SetupNewSystemEnvironment.md  pyproject.toml
.github/workflows/: lint_check.yml  pre-commit.yml
infra_thunder/lib/ami/: ec2_get_ami.py
infra_thunder/modules/aws/dynamodb/: dynamodb.py
infra_thunder/modules/aws/elasticsearch/: elasticsearch.py
infra_thunder/modules/aws/k8s_controllers/personalizers/cni/: cilium.py
infra_thunder/modules/aws/sqs/: sqs.py
infra_thunder/modules/aws/transitgateway/: transitgateway.py
infra_thunder/modules/azure/k8s_controllers/: k8s_controllers.py
infra_thunder/modules/azure/network/: network.py
scripts/: github_actions-install_tools.sh
sysenvs/aws/oh-aws-us-west-2-sandbox-dev/: pyproject.toml
