[tool.poetry]
name = "infra_thunder"
version = "0.0.1"
description = "Modules to build a SysEnv using Pulumi"
authors = ["Infra Thunder Admins <admin@nodomain.local>"]

[tool.poetry.dependencies]
python = "^3.11"
pulumi = "3.181.0"
pulumi-kubernetes = "4.23.0"
pulumi-tls = "5.2.0"
pulumi-datadog = "4.51.0"
pulumi_random = "4.18.2"
pulumi-aws = { version = "6.83.0", optional = true }
pulumi-azure-native = { version = "3.5.1", optional = true }
pulumi-azuread = { version = "6.5.1", optional = true }
azure-core = { version = "1.34.0", optional = true }
azure-mgmt-authorization = { version = "4.0.0", optional = true }
kubernetes = "^33.0.0"
dacite = "1.9.2"
# Pinned because HiYaPyCo is not compatible with newer versions of Jinja2
Jinja2 = "3.1.6"
Sphinx = "8.2.3"
HiYaPyCo = "^0.7.0"
wheel = "^0.45.0"
jmespath = "^1.0.0"
boto3 = "^1.33.13"
click = "^8.1.7"
click-option-group = "^0.5.6"
# Pinned because we cannot bump to a new Jinja2 because of HiYaPyCo
MarkupSafe = "3.0.2"
pulumi-cloudflare = "^6.0.0"
pulumi-postgresql = "^3.10.0"


[tool.poetry.extras]
aws = ["pulumi-aws"]
azure = ["pulumi-azure-native", "pulumi-azuread", "azure-core", "azure-mgmt-authorization"]
all = ["pulumi-aws", "pulumi-azure-native", "pulumi-azuread", "azure-core", "azure-mgmt-authorization"]

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.35.0"
black = "^25.0.0"
flake8 = "^7.0.0"

[tool.poetry.scripts]
infra_thunder = "infra_thunder.lib.cli:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.yamlfix]
line_length = 1000
comments_min_spaces_from_content = 1
flow_style_sequence = false
sequence_style = "keep_style"
preserve_quotes = true

[tool.poe.tasks]
format = { cmd = "black infra_thunder/", help = "Reformat code to conform with `black` code style standards" }
format-check = { cmd = "black --check infra_thunder/", help = "Check if code conforms with `black` code style standards" }
lint = { cmd = "flake8 infra_thunder/", help = "Check source code using code quality tools" }
