[tool.poetry]
name = "oh-aws-us-west-2-sandbox-dev"
version = "0.0.1"
description = "Infra Thunder Example"
authors = ["Infra Thunder Admins <admin@nodomain.local>"]

[tool.poetry.dependencies]
python = "^3.10"
infra-thunder = {git = "git@github.com:missingcharacter/infra-thunder.git", rev = "79a0f3dc3dec99e757d6e458d3dd698c36bd99db", extras = ["aws"]}
#infra-thunder = { path = "/local/path/to/infra-thunder-public", extras = ["aws"], develop = true }

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.35.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
