[tool.poetry]
name = "oh-aws-us-west-2-sandbox-dev"
version = "0.0.1"
description = "Infra Thunder Example"
authors = ["Infra Thunder Admins <admin@nodomain.local>"]

[tool.poetry.dependencies]
python = "^3.10"
infra-thunder = {git = "git@github.com:missingcharacter/infra-thunder.git", rev = "db7bd989f2ea94a4de4af11c34e45528c8fec8b1", extras = ["aws"]}
#infra-thunder = { path = "/local/path/to/infra-thunder-public", extras = ["aws"], develop = true }

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.39.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
