[tool.poetry]
name = "oh-aws-us-west-2-sandbox-dev"
version = "0.0.1"
description = "Infra Thunder Example"
authors = ["Infra Thunder Admins <admin@nodomain.local>"]

[tool.poetry.dependencies]
python = "^3.10"
infra-thunder = {git = "git@github.com:missingcharacter/infra-thunder.git", rev = "51888616d1420d0baa583247008a00f3aba19b8f", extras = ["aws"]}
#infra-thunder = { path = "/local/path/to/infra-thunder-public", extras = ["aws"], develop = true }

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.40.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
